<resources>
    <string name="app_name">HEAL</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="endl">\r\n</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="aim_junior">初级</string>
    <string name="aim_middle">中级</string>
    <string name="aim_senior">高级</string>
    <string name="login_type_wechat">微信</string>
    <string name="login_type_qq">QQ</string>
    <string name="login_type_weibo">微博</string>
    <string name="login_type_standard">默认</string>
    <string name="login_type_phone">手机号</string>
    <string name="login_type_mail">邮箱</string>

    <!-- explore -->
    <string name="explore_plan_lite_intro_1">个穴位 / 天数</string>
    <string name="explore_plan_lite_intro_2">天 / 每天</string>
    <string name="explore_plan_lite_intro_3">分钟</string>
    <string name="courses_preview_title">计划预览</string>
    <string name="courses_explain_title">计划说明</string>
    <string name="course_day_index_text_format">第 %1$s 天</string>
    <string name="course_content_size_text_format">%1$s个穴位 ／ 完成%2$s分钟</string>
    <string name="course_finish_date_text_format">%1$s / %2$s / %3$s  %4$s</string>
    <string name="explore_detail_join_text">选择参加此计划</string>
    <string name="explore_detail_consume_text">开启今日的健康之旅</string>
    <string name="explore_circle_progress_text_format">%1$s / %2$s</string>
    <string name="explore_detail_current_course_text_format">今日计划 : %1$s</string>
    <string name="explore_add_plan_success_toast">添加计划成功</string>
    <string name="explore_add_plan_failed_toast">添加计划失败</string>
    <string name="explore_detail_course_not_finish_time_text">---- / -- / -- ----</string>

    <!-- consumer -->
    <string name="consumer_interpretation_text">穴位与动作说明</string>
    <string name="consumer_progress_upper_text">完成</string>
    <string name="consumer_progress_repeat_lower_text">次数</string>
    <string name="consumer_progress_duration_lower_text">时间</string>
    <string name="consumer_guide_label_text">穴位说明与动作指导</string>
    <string name="consumer_progress_guide_upper_text">教学</string>
    <string name="consumer_progress_guide_lower_text">时长</string>
    <string name="consumer_skip_guide_label_text">跳过教学指导</string>
    <string name="consumer_interpretation_label_acupoint_name">【穴位名称】 </string>
    <string name="consumer_interpretation_label_acupoint_position">【定位】 </string>
    <string name="consumer_interpretation_label_acupoint_bodypart">【所在部位】 </string>
    <string name="consumer_interpretation_label_acupoint_meridian">【所属经络】 </string>
    <string name="consumer_interpretation_label_acupoint_technique">【手法】 </string>
    <string name="consumer_interpretation_label_acupoint_operation">【操作方法】 </string>
    <string name="consumer_interpretation_label_acupoint_function">【功能】 </string>
    <string name="consumer_record_action_time_format">%1$s 秒</string>
    <string name="consumer_pause_content_text_1">充足的睡眠可以缓解头部的疲劳</string>
    <string name="consumer_pause_content_text_2">新鲜的空气和放松的心情有助于脑力的回复</string>
    <string name="consumer_pause_content_text_3">当你无法使用HEAL时</string>
    <string name="consumer_pause_content_text_4">闭目养神尝试深呼吸10次，也是不错的办法</string>
    <string name="consumer_pause_sound_volume_label_text">指导音量</string>
    <string name="consumer_pause_music_volume_label_text">音乐音量</string>
    <string name="consumer_give_up_content_text_1">继续努力</string>
    <string name="consumer_give_up_content_text_2">本次计划尚未完成</string>
    <string name="consumer_finish_star_label_text">感觉如何</string>
    <string name="consumer_exit_dialog_message">健康计划还未结束,现在退出无法保存训练数据,还要退出吗?</string>
    <string name="consumer_exit_cancel_text">继续训练</string>
    <string name="consumer_exit_confirm_text">结束计划</string>

    <!-- archives -->
    <string name="archives_in_login_progress_hint_text">正在登录中</string>
    <string name="archives_login_failed_hint_text">登录失败</string>
    <string name="archives_lack_id_hint_text">请输入用户名</string>t
    <string name="archives_lack_password_hint_text">请输入密码</string>
    <string name="archives_lack_nickname_hint_text">请输入昵称</string>
    <string name="archives_lack_password_confirm_hint_text">请确认密码</string>
    <string name="archives_lack_phone_number_hint_text">请输入手机号码</string>
    <string name="archives_lack_email_hint_text">请输入邮箱地址</string>
    <string name="archives_lack_verify_code_hint_text">请输入验证码</string>
    <string name="archives_lack_old_password_hint_text">请输入原密码</string>
    <string name="archives_lack_new_password_hint_text">请输入新密码</string>
    <string name="archives_lack_new_password_confirm_hint_text">请确认新密码</string>
    <string name="archives_register_password_confirm_failed_hint_text">两次输入的密码不一致</string>
    <string name="archives_register_success_hint_text">注册成功</string>
    <string name="archives_register_failed_hint_text">注册失败</string>
    <string name="archives_login_third_part_hint_text">使用其他社交工具登录</string>
    <string name="archives_login_action_login_text">登录</string>
    <string name="archives_login_action_register_text">注册</string>
    <string name="archives_login_action_hint_text">我已阅读注册说明</string>
    <string name="archives_login_input_password_label_text">密码</string>
    <string name="archives_login_input_password_hint_text">输入密码</string>
    <string name="archives_login_input_user_label_text">用户</string>
    <string name="archives_login_input_user_hint_text">电话/邮箱</string>
    <string name="archives_login_input_nickname_hint_text">输入昵称</string>
    <string name="archives_login_input_password_confirm_hint_text">确认密码</string>
    <string name="archives_login_forget_password_hint_text">忘记密码</string>
    <string name="archives_user_progress_time_minute_upper_text">共计</string>
    <string name="archives_user_progress_time_minute_lower_text">分钟</string>
    <string name="archives_user_progress_time_day_upper_text">累计</string>
    <string name="archives_user_progress_time_day_lower_text">天</string>
    <string name="archives_user_progress_time_continue_day_upper_text">连续</string>
    <string name="archives_user_progress_time_continue_day_lower_text">天</string>
    <string name="archives_user_progress_acupoint_upper_text">完成</string>
    <string name="archives_user_progress_acupoint_lower_text">穴位</string>
    <string name="archives_user_progress_count_upper_text">累计</string>
    <string name="archives_user_progress_count_lower_text">次</string>
    <string name="archives_user_progress_kharazim_point_label_text">元气</string>
    <string name="archives_user_progress_kharazim_point_unit_text">点</string>
    <string name="archives_plan_list_header_label_text">我的计划</string>
    <string name="archives_add_more_hint_text">添加新的健康计划</string>
    <string name="archives_delete_plan_alert_message">确认删除计划?</string>
    <string name="archives_stats_day_filter_label_text">日</string>
    <string name="archives_stats_week_filter_label_text">周</string>
    <string name="archives_stats_month_filter_label_text">月</string>
    <string name="archives_stats_all_filter_label_text">总</string>
    <string name="archives_stats_list_label_text">计划明细</string>
    <string name="archives_settings_account_tab_title">账号管理</string>
    <string name="archives_settings_health_aim_tab_title">保健目标</string>
    <string name="archives_settings_cache_tab_title">缓存管理</string>
    <string name="archives_settings_about_tab_title">关于</string>
    <string name="archives_settings_user_state_holder_text">编辑用户资料</string>
    <string name="archives_edit_undefine_text">未填写</string>
    <string name="archives_edit_user_profile_title">个人资料</string>
    <string name="archives_edit_user_profile_save_text">保存</string>
    <string name="archives_edit_user_profile_edit_head_text">更换头像</string>
    <string name="archives_edit_user_profile_edit_nickname_text">昵称:</string>
    <string name="archives_edit_user_profile_edit_gender_text">性别:</string>
    <string name="archives_edit_user_profile_edit_birthday_text">生日:</string>
    <string name="archives_edit_user_profile_edit_area_text">所在地区:</string>
    <string name="archives_edit_user_profile_edit_height_text">身高:</string>
    <string name="archives_edit_user_profile_edit_weight_text">体重:</string>
    <string name="archives_edit_user_aim_commit_text">提交</string>
    <string name="archives_edit_user_aim_title">保健目标</string>
    <string name="archives_account_manage_current_login_type_text_format">您已使用%1$s登陆</string>
    <string name="archives_account_manage_bind_phone_text">前往绑定手机</string>
    <string name="archives_account_manage_bind_mail_text">前往绑定邮箱</string>
    <string name="archives_account_manage_reset_password_text">修改密码</string>
    <string name="archives_account_manage_logout_text">退出本账号</string>
    <string name="archives_account_manage_title_text">账号管理</string>
    <string name="archives_bind_failed_hint_text">绑定失败</string>
    <string name="archives_bind_type_phone_label_text">手机</string>
    <string name="archives_bind_type_mail_label_text">邮箱</string>
    <string name="archives_bind_password_label_text">密码</string>
    <string name="archives_bind_confirm_password_label_text">确认密码</string>
    <string name="archives_bind_verify_code_label_text">验证码</string>
    <string name="archives_bind_fetch_verify_code_text">点击获取验证码</string>
    <string name="archives_bind_phone_title_text">绑定手机</string>
    <string name="archives_bind_mail_title_text">绑定邮箱</string>
    <string name="archives_bind_commit_text">提交</string>
    <string name="archives_reset_password_failed_hint_text">重置密码失败</string>
    <string name="archives_about_us_title_text">关于</string>
    <string name="archives_service_contract_title">服务条款</string>
    <string name="archives_privacy_contract_title">隐私条款</string>
    <string name="archives_official_mail_title">邮箱</string>
    <string name="archives_official_mail">heal@heal361.com</string>
    <string name="archives_feed_back_title">用户反馈</string>
    <string name="archives_app_version_text_format">HEAL V %1$s</string>
</resources>
